[package]
name = "dovetail"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winit = "0.25.0"
glam = "0.16.0"
wgpu = "0.9.0"
pollster = "0.2.4"
tracing = "0.1.26"
tracing-subscriber = "0.2.18"
meshopt = "0.1.9"
obj-rs = "0.6.3"
bytemuck = "1.7.0"
memoffset = "0.6.4"
naga = { version = "0.5.0", features = ["wgsl-in"] }
async-executor = "1.4.1"
